--- a/index.html
+++ b/index.html
@@ -1,16 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Redirecting...</title>
-    <meta http-equiv="refresh" content="0; URL='https://www.heroesofhistory.wiki'">
-    <script>
-        // For users with JavaScript disabled
-        window.location.href = "https://www.heroesofhistory.wiki";
-    </script>
-</head>
-<body>
-    <p>If you are not redirected, <a href="https://www.heroesofhistory.wiki">click here</a>.</p>
-</body>
-</html>
+test
